k8s/overlays/nig/k8s-pups-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-pups-controller
  namespace: k8s-pups
spec:
  selector:
    app: k8s-pups-controller
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
